<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:background="@color/cardview_dark_background"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context=".MainActivity">

    <TextView
        android:background="@color/cardview_light_background"
        android:id="@+id/OutputTxt"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:layout_width="300dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_marginStart="85dp"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clear"
            android:text="@string/clear"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/divide"
            android:text="@string/divide"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/multiplication"
            android:text="@string/multiply"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/minus"
            android:text="@string/minus"
            android:textScaleX="3"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/negativeOrPositive"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/dot"
            android:text="@string/dot"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/equals"
            android:text="@string/equals"
            android:layout_margin="5dp"
            android:layout_width="75dp"
            android:layout_height="75dp" />

    </LinearLayout>

</LinearLayout>